HappierMe for teenagers mobile and text alignment fixing

--- a/HumanWisdom/projects/getStarted/assets/css/main.css
+++ b/HumanWisdom/projects/getStarted/assets/css/main.css
@@ -62,6 +62,16 @@ h6 {
   font-family: var(--font-secondary);
 }
 
+.land-happierMe-section {
+  justify-content: center;
+  display: flex;
+}
+
+.land-happierMe-gap {
+  column-gap: 4.8rem;
+}
+
+
 /*--------------------------------------------------------------
 # Sections & Section Header
 --------------------------------------------------------------*/
@@ -165,6 +175,18 @@ section {
   padding-right: 10px;
   color: #676775;
   content: "/";
+}
+
+@media (min-width: 2560px) {
+  .land-happierMe-section {
+    justify-content: center;
+    display: flex;
+    margin-right: -8rem;
+  }
+  
+  .land-happierMe-gap {
+    column-gap: 0rem;
+  }
 }
 
 @media (max-width: 992px) {
